<resources>
    <string name="app_name">moviles_g13</string>
    <string name="action_settings">Configuraciones</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <string name="company_name">Vinilos</string>

    <string name="text_visitor">Visitante</string>
    <string name="text_collector">Coleccionista</string>

    <!-- texts for buttons of collector home -->
    <string name="text_my_albums">Mis Álbumes</string>

    <!-- texts for buttons of visitor home -->
    <string name="text_vis_albums">Álbumes</string>
    <string name="text_vis_artists">Artistas</string>
    <string name="text_vis_collectors">Coleccionistas</string>

    <string name="home_fragment_label">Home</string>
    <string name="visitor_fragment_label">Visitor</string>
    <string name="collector_fragment_label">Collector</string>
    <string name="title_home">Home</string>

    <string name="menu_album">Albumes</string>
    <string name="menu_artists">Artistas</string>
    <string name="menu_collections">Collecionistas</string>
    <string name="album_fragment_label">Albums</string>
    <string name="back_button_description">Volver a la pantalla anterior</string>
    <string name="create_album">Crear Album</string>
    <string name="form_create_description">En este formulario podràs diligenciar toda la información asociada a un album</string>
    <string name="form_create_prize_description">En este formulario podràs diligenciar toda la información asociada a un premio</string>
    <string name="str_form_1">Nombre</string>
    <string name="str_form_2">Fecha de lanzamiento</string>
    <string name="str_form_3">Género</string>
    <string name="str_form_4">Record</string>
    <string name="str_form_5">URL Cover</string>
    <string name="str_form_6">Descripción</string>

    <string name="create_prize">Crear premios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simbolo_corazon">simbolo de corazon</string>
    <string name="simbolo_de_corazon">simbolo de corazon</string>
    <string name="boton_para_devolverse">boton para devolverse</string>
    <string name="simbolo_de_agregar">Simbolo para agregar</string>
    <string name="artists">Artists</string>
    <string name="go_back_to_previous_screen">Regresar a la pantalla anterior</string>
    <string name="menu">menu</string>
    <string name="name_form">Nombre</string>
    <string name="description_form">Descripción</string>
    <string name="organization">Organizacion</string>
    <string name="albums">Albumes</string>


    <string name="aritst_item">Elemento de lista artistas</string>
    <string name="artist_item_img">logo de artista</string>
    <string name="artist_item_name">Nombre del artista</string>
    <string name="artist_item_description">Descripción del artista</string>

    <string name="album_item">item de la lista de albums</string>
    <string name="album_item_logo">Imagen del album</string>
    <string name="album_item_name">Nombre del album</string>
    <string name="album_item_gender">Genero del album</string>
    <string name="album_item_disc">estudio discrografico</string>
    <string name="album_item_content">Información del album</string>
    <string name="album_item_description">Descripción del album</string>

    <string name="collector_name">Nombre:</string>
    <string name="collector_phone">Teléfono:</string>
    <string name="collector_email">E-mail:</string>
    <string name="collector_albums">Álbumes a la venta:</string>
    <string name="collectors_title">Coleccionsitas</string>
    <string name="collectors_detail_title">Detalle colecionista</string>
    <string name="collector_img">Imagen colecionista</string>

</resources>