<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <!-- Navigation for home -->
    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.moviles_g13.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/home_fragment">

        <action
            android:id="@+id/action_home_to_visitor_layout"
            app:destination="@id/VisitorFragment" />

        <action
            android:id="@+id/action_home_to_collector_layout"
            app:destination="@id/CollectorFragment" />
    </fragment>


    <!-- Navigation for visitor -->
    <fragment
        android:id="@+id/VisitorFragment"
        android:name="com.example.moviles_g13.VisitorFragment"
        android:label="@string/visitor_fragment_label"
        tools:layout="@layout/visitor_fragment">

        <action
            android:id="@+id/action_visitor_to_home_layout"
            app:destination="@id/HomeFragment" />
    </fragment>


    <!-- Navigation for collector -->
    <fragment
        android:id="@+id/CollectorFragment"
        android:name="com.example.moviles_g13.CollectorFragment"
        android:label="@string/collector_fragment_label"
        tools:layout="@layout/collector_fragment">

        <action
            android:id="@+id/action_collector_to_home_layout"
            app:destination="@id/HomeFragment" />
    </fragment>

</navigation>