<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="false">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutForm"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/form_description_text"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/form_create_description"
            android:textColor="#000"
            android:textSize="24dp"
            app:autoSizeTextType="uniform"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/form_description_text"
            app:cornerRadius="64dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_input_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="32dp"
                android:hint="@string/str_form_1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_input_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/form_input_name"
            app:cornerRadius="64dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_input_text_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="32dp"
                android:hint="@string/str_form_2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_input_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/form_input_year"
            app:cornerRadius="64dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_input_text_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="32dp"
                android:hint="@string/str_form_3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_input_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/form_input_artist"
            app:cornerRadius="64dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_input_text_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="32dp"
                android:hint="@string/str_form_4" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_album_button"
            android:layout_width="256dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/create_album"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_input_image"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout >

</layout>