<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="32dp"
    tools:context=".ui.home_visitor.HomeVisitorFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#fff"
        android:src="@drawable/previous_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription = "@string/boton_para_devolverse"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689">

        <TextView
            android:id="@+id/company_text"
            android:layout_width="212dp"
            android:layout_height="72dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/company_name"
            android:textColor="@color/black"
            android:textAlignment="gravity"
            app:autoSizeTextType="uniform" />

        <ImageView
            android:id="@+id/company_logo"
            android:layout_width="96dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:src="@drawable/vinil_style_2"
            android:contentDescription ="logo de una empresa"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button_section"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="4dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/albums_button"
            android:layout_width="257dp"
            android:layout_height="48dp"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/text_vis_albums"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/artists_button"
            android:layout_width="257dp"
            android:layout_height="48dp"
            android:layout_below="@+id/albums_button"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/text_vis_artists"
            app:cornerRadius="32dp"></Button>

        <Button
            android:id="@+id/collectors_button"
            android:layout_width="257dp"
            android:layout_height="48dp"
            android:layout_below="@+id/artists_button"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/text_vis_collectors"
            app:cornerRadius="32dp">
        </Button>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>