<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="prize"
            type="com.example.moviles_g13.model.Prize" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="8dp"
        android:paddingRight="20dp"
        android:paddingBottom="8dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_input_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="#e0e0e0"
            android:textColor="#000"
            app:cornerRadius="64dp"
            app:layout_constraintTop_toBottomOf="@+id/form_description_text"
            tools:ignore="MissingConstraints,UnknownIdInLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e0e0e0"
                android:hint="@string/name_form"
                android:textColor="#000"
                app:cornerRadius="32dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_input_text_description_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cornerRadius="64dp"
            app:layout_constraintTop_toBottomOf="@+id/form_input_text_name"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_input_description_prize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e0e0e0"
                android:hint="@string/description_form"
                android:textColor="#000"
                app:cornerRadius="32dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_input_text_organization_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cornerRadius="64dp"
            app:layout_constraintTop_toBottomOf="@+id/form_input_text_description_prize"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_input_organization_prize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e0e0e0"
                android:hint="@string/organization"
                android:textColor="#000"
                app:cornerRadius="32dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="172dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/create_prize_button"
            android:layout_width="256dp"
            android:layout_height="48dp"
            android:layout_marginTop="110dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/create_prize"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_input_text_description_prize"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>