<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="32dp"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614">

        <TextView
            android:id="@+id/company_text"
            android:layout_width="212dp"
            android:layout_height="72dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/company_name"
            android:textColor="@color/black"
            android:textAlignment="gravity"
            app:autoSizeTextType="uniform" />

        <ImageView
            android:id="@+id/company_logo"
            android:layout_width="96dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:src="@drawable/vinil_style_2"
            android:contentDescription = "logo de de una empresa"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button_section"
        android:layout_width="fill_parent"
        android:layout_height="128dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="200dp">

        <Button
            android:id="@+id/visitor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="63dp"
            android:layout_marginRight="63dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/text_visitor"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/collector_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/text_collector"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>